samples/_failures_safe/1761464641_09d8d2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1aa89c87.c: In function ‘main’:
./samples/SAFE/__tmp_1aa89c87.c:157:9: error: expected declaration or statement at end of input
  157 |         message[strcspn(message, "\n")] = '\0';
      |         ^~~~~~~
./samples/SAFE/__tmp_1aa89c87.c:157:9: error: expected declaration or statement at end of input
